--- a/reacttest/hello-world/package.json
+++ b/reacttest/hello-world/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-world",
-  "homepage": "https://jirengu-inc.github.io/project-react-1",
+  "homepage": "https://freebreaker.github.io/react/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
