--- a/reacttodo/todo/package.json
+++ b/reacttodo/todo/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo",
+  "homepage": "https://freebreaker.github.io/react/reacttodo/todo/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
